<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/coffee_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/coffee" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/coffeeshop_name"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:text="@string/description" />

    <TextView
        android:text="@string/address"
        android:drawableLeft="@drawable/address"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:gravity="center_vertical"  />

    <TextView
        android:text="@string/phone"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:gravity="center_vertical"  />

    <TextView
        android:text="@string/time"
        android:drawableLeft="@drawable/time"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:gravity="center_vertical"  />

</LinearLayout>
